--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "axios": "~1.3.5",
     "body-parser": "^1.20.2",
     "boxen": "~5.1.2",
+    "canvas": "^2.11.2",
     "case": "~1.6.3",
     "chalk": "~4.1.2",
+    "chroma-js": "^2.4.2",
     "cron": "~2.3.0",
     "cron-validator": "~1.3.1",
     "cross-env": "~7.0.3",
@@ -72,9 +74,11 @@
     "pidusage": "~3.0.2",
     "reflect-metadata": "~0.1.13",
     "rentry-pastebin": "~1.3.0",
+    "rpg-dice-roller": "^5.0.0",
     "rxeta": "~1.1.2",
     "saveqlite": "~1.1.2",
     "semver": "^7.4.0",
+    "sharp": "^0.32.1",
     "socket.io-client": "~4.6.1",
     "stacktrace-parser": "~0.1.10",
     "swagger-ui-express": "~4.6.2",
@@ -89,6 +93,7 @@
     "@swc/core": "1.3.27",
     "@types/better-sqlite3": "~7.6.3",
     "@types/body-parser": "^1.19.2",
+    "@types/chroma-js": "^2.4.0",
     "@types/cron": "~2.0.1",
     "@types/dateformat": "~5.0.0",
     "@types/express": "~4.17.17",
