--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
 			"@decorators": ["src/utils/decorators"],
 			"@decorators/*": ["src/plugins/*/utils/decorators"],
 
+			"@images": ["src/assets/images"],
+			"@images/*": ["src/plugins/*/assets/images"],
+
 			"@errors": ["src/utils/errors"],
 			"@errors/*": ["src/plugins/*/utils/errors"],
 
